# finance_AI_Model

./: LICENSE  OG_code.py  Portfolio.py  README.md  Untitled.ipynb  entity.py  everythingNew-1 (1).ipynb  generate_dataset.py  pyproject.toml  stock_data.csv  stock_trading_env.py  test.py
images/: training_logs.csv
